# behest

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  buf.gen.yaml  buf.yaml  build.rs  deny.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  security-audit.yml
behest/: Cargo.toml
behest-adapter-anthropic/: Cargo.toml
behest-adapter-anthropic/src/: chat.rs  convert.rs  http.rs  lib.rs  sse.rs  types.rs
behest-adapter-openai/: Cargo.toml
behest-adapter-openai/src/: chat.rs  convert.rs  embed.rs  http.rs  lib.rs  sse.rs  types.rs
behest-approval/: Cargo.toml
behest-approval/src/: lib.rs
behest-context/: Cargo.toml
behest-context/src/: factory.rs  impls.rs  lib.rs
behest-core/: Cargo.toml
behest-core/src/: cache.rs  capabilities.rs  embedding.rs  error.rs  events.rs  health.rs  id.rs  lib.rs  message.rs  run.rs  token.rs  tool_types.rs
behest-event/: Cargo.toml
behest-event/src/: agent_event.rs  lib.rs
behest-memory/: Cargo.toml
behest-memory/src/: lib.rs
behest-provider/: Cargo.toml
behest-provider/src/: capabilities.rs  config.rs  embedding.rs  events.rs  registry.rs  traits.rs
behest-runtime/: Cargo.toml
behest-runtime/src/: accumulator.rs  agent.rs  cache_stats.rs  component.rs  component_factory.rs  components.rs  context.rs  error.rs  event.rs  event_publisher.rs  event_store.rs  extension.rs  extensions.rs  factory_registry.rs  invocation.rs  lib.rs  lifecycle.rs  managed.rs  memory.rs  policy.rs  registry.rs  router.rs  run.rs  run_loop.rs  session_data_store.rs  snapshot.rs  state.rs  store.rs  stream.rs  stream_adapter.rs  subscription.rs  token.rs  tool_runtime.rs  tool_scope.rs  turn.rs
behest-runtime/src/compaction/: mod.rs  prompt.rs  prune.rs  select.rs
behest-runtime/src/event_store/: postgres.rs  redis.rs
behest-runtime/src/stream_adapter/: nats_jetstream.rs  redis.rs
behest-store/: Cargo.toml
behest-store/src/: lib.rs  util.rs
behest-store/src/memory/: artifact.rs  composite.rs  embedding.rs  execution.rs  session.rs
behest-store/src/mongodb/: session.rs
behest-store/src/object/: artifact.rs
behest-store/src/qdrant/: embedding.rs  mod.rs
behest-store/src/redis/: session.rs
behest-store/src/sql/: embedding.rs  execution.rs  session.rs
behest-store/src/sql/migrations/mysql/: 002_create_messages.sql  003_create_tool_executions.sql
behest-store/src/sql/migrations/postgres/: 004_create_tool_executions.sql  006_add_compaction_fields.sql
behest-store/src/sql/migrations/sqlite/: 005_add_compaction_fields.sql
behest-store/src/surrealdb/: session.rs
behest-tool/: Cargo.toml
behest-tool/src/: lib.rs  strategy.rs
behest/src/: context.rs  error.rs  health.rs  lib.rs  prelude.rs  token.rs  tool.rs  tool_output.rs  tool_scope.rs
behest/src/adapt/: http.rs  mod.rs  sse.rs
behest/src/adapt/anthropic/: chat.rs  mod.rs
behest/src/adapt/openai/: chat.rs  convert.rs  mod.rs  types.rs
behest/src/agent/: mod.rs
behest/src/config/: component.rs  loader.rs  mod.rs  provider.rs  rag.rs  runtime.rs  store.rs
behest/src/provider/: config.rs  id.rs  message.rs  mod.rs  tool.rs
behest/src/queue/: mod.rs  nats.rs  redis_streams.rs
behest/src/rag/: mod.rs
behest/src/runtime/: accumulator.rs  agent.rs  cache_stats.rs  component.rs  component_factory.rs  components.rs  context.rs  doom_loop.rs  error.rs  event.rs  event_store.rs  extension.rs  extensions.rs  factory_registry.rs  input.rs  invocation.rs  lifecycle.rs  managed.rs  memory.rs  mod.rs  policy.rs  registry.rs  router.rs  run.rs  run_loop.rs  session_data_store.rs  session_gate.rs  snapshot.rs  state.rs  store.rs  stream.rs  stream_adapter.rs  subscription.rs  tool.rs  tool_output.rs  turn.rs
behest/src/runtime/compaction/: mod.rs  overflow.rs  prompt.rs  prune.rs
behest/src/runtime/event_store/: postgres.rs  redis.rs
behest/src/runtime/stream_adapter/: nats_jetstream.rs  redis.rs
behest/src/store/: mod.rs
behest/src/store/memory/: composite.rs  embedding.rs
behest/src/store/mongodb/: session.rs
behest/src/store/object/: artifact.rs
behest/src/store/redis/: session.rs
behest/src/store/sql/: embedding.rs  execution.rs  mod.rs
behest/src/store/sql/migrations/mysql/: 004_create_usage_records.sql
behest/src/store/sql/migrations/postgres/: 001_create_sessions.sql  002_create_messages.sql  003_create_embeddings.sql  005_create_usage_records.sql
behest/src/store/sql/migrations/sqlite/: 001_create_sessions.sql  003_create_tool_executions.sql
behest/src/store/surrealdb/: mod.rs  session.rs
examples/: agent_registry.rs  cache_dashboard.rs  config_from_toml.rs  context_pipeline.rs  control_basics.rs  event_store_replay.rs  event_subscription.rs  hello_config.rs  hot_swap.rs  invocation_facade.rs  managed_runtime.rs  message_history.rs  provider_setup.rs  real_request.rs  reasoning_graph.rs  run_streaming.rs  session_data_store.rs  session_lifecycle.rs  snapshot_compaction.rs  token_estimation.rs  tool_execution.rs  tool_registry.rs
spac/: architecture.md  contributing.md  conventions.md  extending.md  proto-versioning.md  testing.md
src/: context.rs  error.rs  health.rs  lib.rs  prelude.rs  token.rs  tool.rs  tool_output.rs  tool_scope.rs
src/adapt/: http.rs  mod.rs  sse.rs
src/config/: component.rs  grpc.rs  loader.rs  mod.rs  provider.rs  queue.rs  rag.rs  runtime.rs  store.rs
src/grpc/: admin.rs  agent_grpc.rs  artifact.rs  auth.rs  chat.rs  compaction.rs  context.rs  embedding.rs  event.rs  mod.rs  provider.rs  run.rs  session.rs  snapshot.rs  state.rs  tool.rs  usage.rs
src/provider/: capabilities.rs  config.rs  embedding.rs  events.rs  id.rs  message.rs  mod.rs  registry.rs  tool.rs  traits.rs
src/queue/: mod.rs  nats.rs  (+1 more)
templates/: banner.html
tests/: anthropic_adapter.rs  grpc_integration.rs  managed_runtime.rs  openai_adapter.rs  provider_registry.rs
(+148 files in other folders)
