[package]
name = "behest"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
resolver = "3"

description = "A Rust-native cloud agent runtime with typed tools, pluggable memory, queues, and observability."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lazhenyi/behest"
homepage = "https://github.com/lazhenyi/behest"
documentation = "https://docs.rs/behest"

keywords = ["agent", "llm", "tool-calling", "runtime", "ai"]
categories = ["asynchronous", "api-bindings", "development-tools"]

authors = ["zhenyi <434836402@qq.com>"]

include = [
    "src/**",
    "examples/**",
    "benches/**",
    "tests/**",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[lib]
name = "behest"
path = "src/lib.rs"

[[bin]]
name = "agent-server"
path = "src/bin/agent-server.rs"
required-features = ["server"]

[features]
default = ["tls-rustls"]

full = [
    "openai",
    "anthropic",
    "redis",
    "redis-cluster",
    "nats",
    "sqlx-postgres",
    "mongodb",
    "surrealdb",
    "otel",
    "rag-all",
    "queue-all",
    "object_store",
]

openai = []
anthropic = []

storage-all = [
    "redis",
    "sqlx-postgres",
    "sqlx-mysql",
    "sqlx-sqlite",
    "mongodb",
    "surrealdb",
]

# Core RAG context adapter (no deps, enables src/rag module)
rag = []

# RAG with all backends
rag-all = [
    "rag",
    "qdrant",
    "tantivy",
]

# Core queue event publisher (no deps, enables src/queue module)
queue = []

# Queue with all backends
queue-all = [
    "queue",
    "nats",
    "redis",
]

tls-rustls = [
    "reqwest/rustls",
    "redis?/tokio-rustls-comp",
    "sqlx?/tls-rustls",
]

tls-native = [
    "reqwest/default-tls",
    "redis?/tokio-native-tls-comp",
    "sqlx?/tls-native-tls",
]

redis = [
    "dep:redis",
    "redis/aio",
    "redis/tokio-comp",
    "redis/connection-manager",
    "redis/streams",
]

redis-cluster = [
    "redis",
    "redis/cluster-async",
]

nats = [
    "dep:async-nats",
]

sqlx = [
    "dep:sqlx",
    "sqlx/runtime-tokio",
    "sqlx/chrono",
    "sqlx/uuid",
    "sqlx/json",
    "sqlx/macros",
    "sqlx/migrate",
]

sqlx-postgres = [
    "sqlx",
    "sqlx/postgres",
]

sqlx-mysql = [
    "sqlx",
    "sqlx/mysql",
]

sqlx-sqlite = [
    "sqlx",
    "sqlx/sqlite",
]

mongodb = [
    "dep:mongodb",
]

surrealdb = [
    "dep:surrealdb",
    "dep:surrealdb-types",
]

otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

qdrant = [
    "dep:qdrant-client",
]

tantivy = [
    "dep:tantivy",
]
object_store = ["dep:object_store", "object_store/aws"]

server = ["dep:tonic", "dep:prost", "dep:prost-types", "dep:tokio-stream", "dep:tonic-health", "dep:tonic-reflection", "tonic-build", "tonic/tls-ring"]

[dependencies]
object_store = {
    version = "0.13.2",
    optional = true
}
tokio = { version = "1.52", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "signal",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }

thiserror = "2.0"

async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "stream",
    "http2",
    "charset",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
] }

schemars = { version = "1.2", features = ["derive"] }
jsonschema = "0.46"

tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "fmt",
    "json",
    "env-filter",
    "registry",
] }

uuid = { version = "1.18", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

secrecy = "0.10"
dotenvy = "0.15"
config = { version = "0.15", default-features = false, features = ["toml", "json", "yaml"] }

indexmap = { version = "2", features = ["serde"] }
bytes = "1"
base64 = "0.22"

redis = { version = "1.2", default-features = false, optional = true }
async-nats = { version = "0.49", optional = true }
sqlx = { version = "0.9", default-features = false, optional = true }
mongodb = { version = "3.7", optional = true }
surrealdb = { version = "3.1", optional = true }
surrealdb-types = { version = "3.1", optional = true }

opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", optional = true, features = ["grpc-tonic"] }
tracing-opentelemetry = { version = "0.33", optional = true }

qdrant-client = { version = "1.18", optional = true }
tantivy = { version = "0.26", optional = true }

actix-web = { version = "4", optional = true, features = ["macros"] }

tonic = { version = "0.13", optional = true, features = ["transport"] }
tonic-health = { version = "0.13", optional = true }
tonic-reflection = { version = "0.13", optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
tokio-stream = { version = "0.1", optional = true, features = ["sync"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
pretty_assertions = "1"
insta = { version = "1", features = ["json"] }
proptest = "1"
wiremock = "0.6"
tracing-test = "0.2"

[build-dependencies]
tonic-build = { version = "0.13", optional = true }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["openai", "anthropic", "redis", "redis-cluster", "nats", "sqlx-postgres", "mongodb", "surrealdb", "otel", "rag-all", "queue-all", "object_store"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = { level = "deny", priority = 10 }
unreachable_pub = { level = "deny", priority = 10 }
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = "deny"
dbg_macro = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
pedantic = { level = "warn", priority = -1 }
doc_markdown = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
unnecessary_wraps = { level = "allow", priority = 1 }
