[workspace]
members = [
    "behest-core",
    "behest-context",
    "behest-tool",
    "behest-event",
    "behest-memory",
    "behest-approval",
    "behest-runtime",
    "behest",
]
resolver = "3"

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lazhenyi/behest"
homepage = "https://github.com/lazhenyi/behest"
documentation = "https://docs.rs/behest"
authors = [
    "zhenyi <434836402@qq.com>",
    "Jiaxiang Hu <1849625991@qq.com>"
]
keywords = ["agent", "llm", "tool-calling", "runtime", "ai"]
categories = ["asynchronous", "api-bindings", "development-tools"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", default-features = false }
tokio-util = { version = "0.7" }
uuid = { version = "1.18", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
async-trait = "0.1"
tracing = "0.1"

# Internal crate references
behest-core = { path = "behest-core" }
behest-context = { path = "behest-context" }
behest-tool = { path = "behest-tool" }
behest-event = { path = "behest-event" }
behest-memory = { path = "behest-memory" }
behest-approval = { path = "behest-approval" }
behest-runtime = { path = "behest-runtime" }
behest = { path = "behest" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = { level = "deny", priority = 10 }
unreachable_pub = { level = "deny", priority = 10 }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }