[package]
name = "behest-approval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Human-in-the-loop tool approval for the behest agent runtime"

[dependencies]
behest-core.workspace = true
behest-event.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
behest-core.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
