[package]
name = "behest-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Layered context system for the behest agent runtime"

[lints]
workspace = true

[dependencies]
behest-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
uuid.workspace = true
chrono.workspace = true
