[package]
name = "behest-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

description = "ConversationMemory, DemotionHook, Compactor, and ActiveWindow for the behest agent runtime"

[dependencies]
behest-core.workspace = true
behest-event.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
