[package]
name = "behest-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Async runtime glue connecting sans-IO state machine to real I/O for the behest agent runtime"

[lints]
workspace = true

[dependencies]
behest-core.workspace = true
behest-context.workspace = true
behest-tool.workspace = true
behest-event.workspace = true
behest-memory.workspace = true
behest-approval.workspace = true
behest-provider.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tokio-util = { workspace = true, features = ["rt"] }
async-trait.workspace = true
futures-util = { version = "0.3", default-features = false, features = ["std"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "rt-multi-thread"] }
tokio-test = "0.4"
