[package]
name = "behest-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Persistence traits and storage backends for the behest agent runtime"

[lints]
workspace = true

[features]
default = []
storage-all = ["redis", "sqlx-postgres", "sqlx-mysql", "sqlx-sqlite", "mongodb"]
redis = ["dep:redis", "redis/aio", "redis/tokio-comp", "redis/connection-manager", "redis/streams"]
redis-cluster = ["redis", "redis/cluster-async"]
sqlx = ["dep:sqlx", "sqlx/runtime-tokio", "sqlx/chrono", "sqlx/uuid", "sqlx/json", "sqlx/macros", "sqlx/migrate"]
sqlx-postgres = ["sqlx", "sqlx/postgres"]
sqlx-mysql = ["sqlx", "sqlx/mysql"]
sqlx-sqlite = ["sqlx", "sqlx/sqlite"]
mongodb = ["dep:mongodb"]
object_store = ["dep:object_store", "object_store/aws"]
tls-rustls = ["redis?/tokio-rustls-comp", "sqlx?/tls-rustls"]
tls-native = ["redis?/tokio-native-tls-comp", "sqlx?/tls-native-tls"]

[dependencies]
behest-core.workspace = true
behest-provider.workspace = true
async-trait.workspace = true
base64 = "0.22"
bytes = "1"
chrono.workspace = true
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order", "raw_value"] }
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
uuid.workspace = true

redis = { version = "1.3", default-features = false, optional = true }
sqlx = { version = "0.9", default-features = false, optional = true }
mongodb = { version = "3.7", optional = true }
object_store = { version = "0.14.0", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
