[package]
name = "behest-tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Tool trait, registry, and execution strategies for the behest agent runtime"

[lints]
workspace = true

[dependencies]
behest-core.workspace = true
behest-context.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
bitflags = "2"
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
