[package]
name = "behest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

description = "A Rust-native cloud agent runtime with typed tools, pluggable memory, queues, and observability."
readme = "../README.md"

include = [
    "src/**",
    "Cargo.toml",
]

[lints]
workspace = true

[lib]
name = "behest"
path = "src/lib.rs"

[[example]]
name = "agent_registry"
path = "../examples/agent_registry.rs"

[[example]]
name = "config_from_toml"
path = "../examples/config_from_toml.rs"

[[example]]
name = "context_pipeline"
path = "../examples/context_pipeline.rs"

[[example]]
name = "control_basics"
path = "../examples/control_basics.rs"

[[example]]
name = "event_store_replay"
path = "../examples/event_store_replay.rs"

[[example]]
name = "event_subscription"
path = "../examples/event_subscription.rs"

[[example]]
name = "hello_config"
path = "../examples/hello_config.rs"

[[example]]
name = "hot_swap"
path = "../examples/hot_swap.rs"

[[example]]
name = "invocation_facade"
path = "../examples/invocation_facade.rs"

[[example]]
name = "managed_runtime"
path = "../examples/managed_runtime.rs"

[[example]]
name = "message_history"
path = "../examples/message_history.rs"

[[example]]
name = "provider_setup"
path = "../examples/provider_setup.rs"

[[example]]
name = "real_request"
path = "../examples/real_request.rs"

[[example]]
name = "run_streaming"
path = "../examples/run_streaming.rs"

[[example]]
name = "session_data_store"
path = "../examples/session_data_store.rs"

[[example]]
name = "session_lifecycle"
path = "../examples/session_lifecycle.rs"

[[example]]
name = "snapshot_compaction"
path = "../examples/snapshot_compaction.rs"

[[example]]
name = "token_estimation"
path = "../examples/token_estimation.rs"

[[example]]
name = "tool_execution"
path = "../examples/tool_execution.rs"

[[example]]
name = "tool_registry"
path = "../examples/tool_registry.rs"

[[test]]
name = "managed_runtime"
path = "../tests/managed_runtime.rs"

[features]
default = ["tls-rustls"]

full = [
    "openai",
    "anthropic",
    "redis",
    "redis-cluster",
    "nats",
    "sqlx-postgres",
    "mongodb",
    "otel",
    "rag-all",
    "queue-all",
    "object_store",
]

openai = ["dep:behest-adapter-openai"]
anthropic = ["dep:behest-adapter-anthropic"]

storage-all = [
    "redis",
    "sqlx-postgres",
    "sqlx-mysql",
    "sqlx-sqlite",
    "mongodb",
]

rag = []
rag-all = [
    "rag",
    "tantivy",
]

queue = []
queue-all = [
    "queue",
    "nats",
    "redis",
]

tls-rustls = [
    "behest-store/tls-rustls",
    "behest-adapter-openai?/tls-rustls",
    "behest-adapter-anthropic?/tls-rustls",
    "redis?/tokio-rustls-comp",
    "sqlx?/tls-rustls",
]

tls-native = [
    "behest-store/tls-native",
    "behest-adapter-openai?/tls-native",
    "behest-adapter-anthropic?/tls-native",
    "redis?/tokio-native-tls-comp",
    "sqlx?/tls-native-tls",
]

redis = [
    "behest-store/redis",
    "dep:redis",
    "redis/aio",
    "redis/tokio-comp",
    "redis/connection-manager",
    "redis/streams",
]

redis-cluster = [
    "redis",
    "behest-store/redis-cluster",
    "redis/cluster-async",
]

nats = [
    "dep:async-nats",
]

sqlx = [
    "behest-store/sqlx",
    "dep:sqlx",
    "sqlx/runtime-tokio",
    "sqlx/chrono",
    "sqlx/uuid",
    "sqlx/json",
    "sqlx/macros",
    "sqlx/migrate",
]

sqlx-postgres = [
    "sqlx",
    "behest-store/sqlx-postgres",
    "sqlx/postgres",
]

sqlx-mysql = [
    "sqlx",
    "behest-store/sqlx-mysql",
    "sqlx/mysql",
]

sqlx-sqlite = [
    "sqlx",
    "behest-store/sqlx-sqlite",
    "sqlx/sqlite",
]

mongodb = [
    "behest-store/mongodb",
    "dep:mongodb",
]

otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

tantivy = []
object_store = ["behest-store/object_store"]

[dependencies]
behest-core.workspace = true
behest-provider.workspace = true
behest-store.workspace = true
behest-adapter-openai = { workspace = true, optional = true }
behest-adapter-anthropic = { workspace = true, optional = true }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "signal",
    "fs",
] }

serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order", "raw_value"] }

thiserror.workspace = true

async-trait.workspace = true
futures-util = { version = "0.3", default-features = false, features = ["std"] }

schemars = { version = "1.2", features = ["derive"] }
jsonschema = "0.46"

tracing.workspace = true
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "fmt",
    "json",
    "env-filter",
    "registry",
] }

uuid.workspace = true
chrono.workspace = true

secrecy = "0.10"
dotenvy = "0.15"
config = { version = "0.15", default-features = false, features = ["toml", "json", "yaml"] }
toml = { version = "1.1", default-features = false, features = ["parse"] }

indexmap = { version = "2", features = ["serde"] }

redis = { version = "1.3", default-features = false, optional = true }
async-nats = { version = "0.49", optional = true }
sqlx = { version = "0.9", default-features = false, optional = true }
mongodb = { version = "3.7", optional = true }

opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", optional = true, features = ["grpc-tonic"] }
tracing-opentelemetry = { version = "0.33", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
pretty_assertions = "1"
insta = { version = "1", features = ["json"] }
proptest = "1"
wiremock = "0.6"
tracing-test = "0.2"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["openai", "anthropic", "redis", "redis-cluster", "nats", "sqlx-postgres", "mongodb", "otel", "rag-all", "queue-all", "object_store"]
